# BatteryHealthForecast

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pre-commit  pyproject.toml
batteryhealthforecast/: __init__.py  pipeline.py
legacy/: BatteryForecast_v2.py
tests/: test_import.py  test_pipeline.py  test_version.py
